# libra-framework

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/actions/build_env/: action.yaml
.github/workflows/: ci.todo  ci.yaml  cleanliness.yaml  debug.yaml  formal.yaml  move.todo  move.yaml  nextest-build.todo  nextest-build.yaml  nextest-run.yaml  publish.yaml  rust-versions.yaml
code-conventions/: move_coding.md
docs/: communtiy_wallet_activation.md
framework/: prover.mk
framework/cached-packages/: Cargo.toml  build.rs
framework/cached-packages/src/: libra_framework_sdk_builder.rs
framework/drop-user-tools/: last_goodbye.move  match_index_with_gc.move  pledge_accounts_with_gc.move
framework/libra-framework/: Move.toml
framework/move-stdlib/: struct_map.rs
framework/releases/: head.mrb
framework/src/: framework_cli.rs  generate_rust_structs.rs  lib.rs  release.rs
framework/src/builder/: release.rs  (+1 more)
smoke-tests/src/: libra_smoke.rs
testsuites/smoke/: Cargo.toml
testsuites/swarm/: Cargo.toml
testsuites/twin/: Cargo.toml
tools/: twin_testnet_v8_testing.md
tools/cli/: Cargo.toml
tools/config/: Cargo.toml
tools/genesis/: Makefile
tools/genesis-legacy-v5/: Cargo.toml
tools/query/: Cargo.toml
tools/rescue/: Cargo.toml  Makefile
tools/storage/: Cargo.toml
tools/swarm/: Cargo.toml
tools/tacoma/: Cargo.toml
tools/tacoma/src/: data_client.rs  demo_cli.rs  lib.rs  main.rs  signers.rs
tools/testnet/: Makefile
tools/txs/: Cargo.toml
upgrade-tests/: Cargo.toml
upgrade-tests/tests/: twin_upgrades.rs
v8_testing_docs/: Makefile  twin_testnet_v8_testing.md
(+166 files in other folders)
